--- a/cv/interests.html
+++ b/cv/interests.html
@@ -3,5 +3,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div>
+        <t>
+            Mina intressen.
+        </t>
+    </div>
+    <div>
+        <r>
+            Jag är intresserad i ganska många saker då jag har växt upp med en stor inflytande av internets egendomar. Från flash spel och bild baserade forum till spel som Minecraft och Command & Conquer så har jag blivit påverkad av de alla. Jag har också ett stort intresse för politik och diskuterar det gärna på det mest politiska ställen någonsin genom internetet. På kort sätt kan man säga att mitt intresse är internet då jag kan ha en genuin konversation med vem som helst på internetet.
+        </r>
+    </div>
+    <img src="https://cdn.discordapp.com/attachments/515200039271006218/757328597341175808/mr_bones.png" alt="shitinsink" >
 </body>
