--- a/cv/me.html
+++ b/cv/me.html
@@ -3,5 +3,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div>
+        <i>
+            Om mig.
+        </i>
+    </div>
+    <div>
+        <o>
+            Jag heter Axel Jobson och var född 2003 den femte maj. Jag har bott här i Sverige under hela mitt liv men har släktingar från andra länder som i Skottland.
+        </o>
+    </div>
+    <img src="https://cdn.discordapp.com/attachments/515200039271006218/757327851581210675/4k.jpg" alt="shitinsink" >
 </body>
