--- a/cv/main_page.html
+++ b/cv/main_page.html
@@ -21,5 +21,6 @@
             <li><a href="http://127.0.0.1:5500/cv/school.html">Skola.</a></li>
         </ul>
     </div>
+    <img src="https://cdn.discordapp.com/attachments/515200039271006218/757325074570412062/based.king.is.oppressed_117815413_1185878588455050_1659270274651349072_n.jpg" alt="shitinsink" >
 </body>
 </html> 
