--- a/monkey business/mainpage.html
+++ b/monkey business/mainpage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container"> <!-- Parent -->
-        <div class="item"> <a href="products.html"> Products </a></div> <!-- Child -->
+        <div class="item"> <a href="products.html"> Banana museum </a></div> <!-- Child -->
         <div class="item"> <a href="#About monkey"> About monkey </a></div> <!-- Child -->
         <div class="item"> <a href="#Contact"> Contact </a></div> <!-- Child -->
         <div class="item"> <a href="#Biased ape list"> Biased ape list </a></div> <!-- Child -->
@@ -16,7 +16,7 @@
 
     </div>
     <div class="container-2">
-Må
+Denna hemsida kommer att visa dig kunskap och sannighet inom samhället som vi befinner oss i. Dagens samhälle är en lögn då de gammla goda samhället är länge borta. De gammla samhället av primaten är det sanna samhället och det är klart då om människan gick tillbaka till de goda så skulle alla av våra problem lösas, man tänker simplet. 
     </div>
 </body>
 </html>
