please just fucking work

--- a/monkey business/products.html
+++ b/monkey business/products.html
@@ -8,15 +8,9 @@
 </head>
 <body>
     <div class="product-container">
-        <div class="products"> <img src="https://cdn.discordapp.com/attachments/515200039271006218/766577132645908481/Banana-Single.jpg" alt="banan" width="100" heigth="100"> </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
-        <div class="products"> Banan </div>
+        <div class="products"> <img src="funny imagies 2007/transperant tranny bonab.jpg" alt="banan" width="100" heigth="100"> Banana - 5$ </div>
+        <div class="products"> <img src="funny imagies 2007/bananadidnothingwrong.png" alt="banan" width="100" heigth="100"> Banana - 1$ </div>
+        <div class="products"> <img src="funny imagies 2007/bochab.png" alt="banan" width="100" heigth="100"> Banana - 32$ </div>
     </div>
 </body>
 </html>
