finished monkeyinfo and started working on contacts

--- a/monkey business/index.html
+++ b/monkey business/index.html
@@ -9,7 +9,7 @@
     <div class="container"> <!-- Parent -->
         <div class="item"> <a href="products.html"> Banana Market </a></div> <!-- Child -->
         <div class="item"> <a href="monkeyinfo.html"> About monkey </a></div> <!-- Child -->
-        <div class="item"> <a href="#Contact"> Contact </a></div> <!-- Child -->
+        <div class="item"> <a href="contact.html"> Contact </a></div> <!-- Child -->
         <div class="item"> <a href="#Biased ape list"> Biased ape list </a></div> <!-- Child -->
         <div class="item"> <a href="#Banana bank"> Banana bank </a></div> <!-- Child -->
 
