--- a/monkey business/monkeyinfo.html
+++ b/monkey business/monkeyinfo.html
@@ -4,5 +4,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="shaun">
+        <div class="shaunjpg"> <img src="funny imagies 2007/shaun.jpg" alt="shaun" width="100" heigth="100">  </div>
+        <div class="shauntxt"> This is Shaun. Shaun is a terrible human because Shaun is not a human. Shaun is 200% monkey and is happy for that. Shaun is a simple monkey. </div>
+    </div>
 </body>
 </html>
