--- a/monkey business/contact.html
+++ b/monkey business/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm>
+<html>
 <head>
 <style>
 </style>
@@ -8,4 +8,4 @@
 <body>
     <div class="shauntxt"> Contact us over at +580 082 356 78 </div>
 </body>
-</htm>
+</html>
