--- a/monkey business/index.html
+++ b/monkey business/index.html
@@ -10,8 +10,8 @@
         <div class="item"> <a href="products.html"> Banana Market </a></div> <!-- Child -->
         <div class="item"> <a href="monkeyinfo.html"> About monkey </a></div> <!-- Child -->
         <div class="item"> <a href="contact.html"> Contact </a></div> <!-- Child -->
-        <div class="item"> <a href="list.html"> Biased ape list </a></div> <!-- Child -->
-        <div class="item"> <a href="#Banana bank"> Banana bank </a></div> <!-- Child -->
+        <div class="item"> <a href="gallery.html"> Ape Gallery </a></div> <!-- Child -->
+        <div class="item"> <a href="banana_bank.html"> Banana bank </a></div> <!-- Child -->
 
 
     </div>
