--- a/BS4/index.html
+++ b/BS4/index.html
@@ -3,13 +3,9 @@
 <head>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale1.0">
-    <title>Document</title>
 </head>
 <body>
-    <div class="caption">Caption</div>
-    <div class="btn-dark">BTN btn-dark</div>
+    <div class="breadcrumb">Hur mår du?</div>
     <div class="container " style="background-color: lightcoral;">
         <h1>Detta är en första container</h1>
         <div class="container" style="background-color: lightgreen ;">
@@ -17,5 +13,6 @@
             <button class"btn"> BUTTON </button>
         </div>
     </div>
+    <div class="card-img-top"> <img src="images/travis.jpg"> </div>
 </body>
 </html>
