--- a/BS4/index.html
+++ b/BS4/index.html
@@ -4,15 +4,15 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="breadcrumb">Hur mår du?</div>
-    <div class="container " style="background-color: lightcoral;">
-        <h1>Detta är en första container</h1>
-        <div class="container" style="background-color: lightgreen ;">
-            <h1>Detta är en andra container <a href="https://google.com"> Länk till google </a>
-            <button class"btn"> BUTTON </button>
-        </div>
-    </div>
-    <div class="card-img-top"> <img src="images/travis.jpg"> </div>
+<body class="text-center">
+    <div class=h3>Element</div>
+    <div class=h6>Ett element är allt mellan en start tag och en slut tag som något mellan en h1 och /h1.</div>
+    <div class=h3> HTML </div>
+    <div class=h6> HTML är det standarda påläggs språket för webb design. Html är uppbyggt av olika element som förklarar för browsern hur saker skall se ut.</div>
+    <div class=h3> Id </div>
+    <div class=h6> Id så att säga är en identification för olika element. Id används för att välja en specifik style declaration i sitt lilla style sheet. </div>
+    <div class=h3> Klass </div>
+    <div class=h6> Klass eller class attributet är   </div>
+    <div class="card-img-top"> <img src="images/small ball cretin.jpg"> </div>
 </body>
 </html>
