pepe peepepepepepepepepepepepeoepe oepeoe ppo pe p

--- a/BS4/index.html
+++ b/BS4/index.html
@@ -5,14 +5,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="text-center">
-    <div class=h3>Element</div>
+    <div class=h2>Element</div>
     <div class=h6>Ett element är allt mellan en start tag och en slut tag som något mellan en h1 och /h1.</div>
-    <div class=h3> HTML </div>
+    <div class=h2> HTML </div>
     <div class=h6> HTML är det standarda påläggs språket för webb design. Html är uppbyggt av olika element som förklarar för browsern hur saker skall se ut.</div>
-    <div class=h3> Id </div>
+    <div class=h2> Id </div>
     <div class=h6> Id så att säga är en identification för olika element. Id används för att välja en specifik style declaration i sitt lilla style sheet. </div>
-    <div class=h3> Klass </div>
-    <div class=h6> Klass eller class attributet är   </div>
+    <div class=h2> Klass </div>
+    <div class=h6> Klass eller class attributet är ett namn som sammankopplar en med likadant namn i css en fil.  </div>
+    <div class=h2> Meta </div>
+    <div class=h6> Meta eller metadata visar data inom ett HTML dokument. Data menas att det är information och data taggen skall altid gå inom head elementet. Metadata används oftasts av olika sök motorer. </div>
+    <div class=h2> Responsive </div>
+    <div class=h6> Responsive menas att något anpassar sig beronede på vilken enhet man vissar hemsidan med. Till exempel om man är på mobil så ändras formatet att passa en mobils skärm. </div>
+    <div class=h2> HTTP </div>
+    <div class=h6> HTTP är sätt om olika klients skickar ett krav till webben som den sedan efter det får ett svar från webben. </div>
+    <div class=h2> HTTPS </div>
+    <div class=h6> HTTPS är en annan version av HTTP men en mer säker version av HTTP. </div>
+    <div class=h2> Data compression </div>
+    <div class=h6> Data compression är när man gömmer information med att använda mindre bits än den förra version av datan. Det finns 2 olika sätt att göra det och det är inom lossy och lossless compression. </div>
+    <div class=h2> CDN </div>
+    <div class=h6> CDN eller Content Delivery Network är en grupp av servrar som arbetar tillsammans för att skapa snabb nerladdnings och flyttning av information på webben. </div>
+    <div class=h2> Local Bootstrap</div>
+    <div class=h6> Local bootstrap är offline bootstrap som en boostrap.css fil inom Visual Studio Code </div>
+    <div class=h2> jQuery </div>
+    <div class=h6> jQuery är ett library som bootstrap som gör det att man behöver skriva mindre när man gör hemsidor med JavaScript </div>
+    <div class=h2> FlexBox </div>
+    <div class=h6></div>
     <div class="card-img-top"> <img src="images/small ball cretin.jpg"> </div>
 </body>
 </html>
