--- a/BS4/index.html
+++ b/BS4/index.html
@@ -30,7 +30,11 @@
     <div class=h2> jQuery </div>
     <div class=h6> jQuery är ett library som bootstrap som gör det att man behöver skriva mindre när man gör hemsidor med JavaScript </div>
     <div class=h2> FlexBox </div>
-    <div class=h6></div>
+    <div class=h6> FlexBox är en Layout model som gör det lättare att skapa en flexible stuktur. </div>
+    <div class=h2> Grid </div>
+    <div class=h6> Grid Layouten ger ett grid-baserat layout system. Detta likt som FlexBox hälper att skapa hemsidor på ett lättare sätt. </div>
+    <div class=h2> Code snippets </div>
+    <div class=h6> Code snippets är en liten samlig av text eller kod som använda för att sätta in common kod och funktioner. </div>
     <div class="card-img-top"> <img src="images/small ball cretin.jpg"> </div>
 </body>
 </html>
