--- a/Webb2/random axel jobson/index.html
+++ b/Webb2/random axel jobson/index.html
@@ -93,7 +93,7 @@
             <br> The Demons are creatures that come from the alternate reality in The Nameless City. They come in many various forms, including humanoids, amalgamations, and possessed animals. Some types of these enemies seem to be made to directly affect the protagonist, such as the Horrors. Possessed animals, such as the Black Phillips and Rats, appear to be animals that have become corrupt by Cultist influences. Ultimately, all of these enemies appear to be borne from Nyarlathotep or are servants to his cause.
         </div>
     </div>   
-    <!--- 
+    <!--- This is unfinished just left this here as i might continue on this website on my own time for fun :v)
     <h2>
         <img src="images/weaponsLogo.png" alt="weaponsLogo">
     </h2>
