--- a/Webb2/bst_inlämning/buyGarlic.html
+++ b/Webb2/bst_inlämning/buyGarlic.html
@@ -45,7 +45,7 @@
             <div class="card-body">
                 <h5 class="card-title">Mycosis Garlic</h5>
                 <p class="card-text">Very good</p>
-                <a href="https://www.n3ws247.com/secrets-on-video-revealed/?cep=-ZEt93ps_EPvtkaUMpGy7lvqvhgJHnJLKD_XP73GAyV0N6HDqr5iqNM1JllDTndUJkWJLMrMnMlvIZ2AdMSOu35T_uM8USLiKAJdUpS91Lch2v-o3c3TFuaACcJfVwfiaja5fVz6vkDGmIzII0cNUxlHbwlotKUzcb-AI5xVg8_bWsXsz5wV9rlKKgGVbB2kNMNn0jS5D5Snm-wn6g4UT91Kyj5CyjjJfYom-wmYLXM1C_c6AewJkwnJ-ag_xiH0BTaYmTNknJPFR7h23zRN8ENTDh-EELt1H8UHw3G9QZy7L15ryGlPS0pCEWoTRigPxAl6Xc3CogUf1YsQhWcpRBvpj3zZ4Ocj_ReYbVY804_7d8vFP9Eh4AleGj95e0yRIlGDklFRbG2TEyhmGbi9BiMoPY_O1-hLEOLGTAlRLESkOWsfr1iIHJ1CMfwJ9KY3R4FmwZJRoeH1CK46c-lP7IsgtPXFPMwcF51v0VciKtLT1Giu5D-uo0hYwxbwYEzA&lptoken=165e37b883b820a50955&teaser_id=11146905&campaign_id=11183195&widget_id=57443509&category_id=149&geo=SE&click_price=0.073&click_id=2dd2b6caef6921e6513a3ffb8b95f0d3&adclida=click_id" class="btn btn-primary">50 Garlicoins</a>
+                <a href="https://www.youtube.com/watch?v=noMp_t2BlGY" class="btn btn-primary">50 Garlicoins</a>
             </div>
             <div class="card-footer">
                 <small class="text-muted">last update 1 mib ago</small>
