--- a/Webb2/bst_inlämning/garlicFacts.html
+++ b/Webb2/bst_inlämning/garlicFacts.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>garlicFacts</title>
+    <script src="bootstrap-5.0.2-dist/js/bootstrap.js"></script>
 </head>
-<body>  
+<body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Garlicplace</a>
@@ -18,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="buyGarlic.html">Buy Garlic</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="garlicFacts.html">Garlic Facts</a>
+            <a class="nav-link" href="garlicFacts.html">Garlic Facts</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="garlicoin.html">Garlicoin</a>
@@ -33,4 +35,62 @@
       </div>
     </div>
   </nav>
+<div class="d-flex justify-content-center">
+  <div class="badge bg-primary text-wrap" style="width: 6rem;">
+    WELCOME TO GARLIC FACTS 2017!!!1!
+  </div>
+</div>
+
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Garlic Fact #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Garlic is pretty cool!!.</strong>  especially for skin condition!!11
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Garlic Fact #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Garlic was invented in 1961 in an old town in south west kentucky !!!!.</strong> woahza just like chickne nugget??? kentucy man???
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Garlic Fact #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>God jul!!!! :).</strong> 
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <h1>end of garlicfacts :( <span class="badge bg-secondary">NEW EVENT!</span></h1>
+</div>
+
+
+  <footer class="text-center text-lg-start bg-light text-muted">
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2021 Copyright:
+      <a class="text-reset fw-bold" href="https://store.steampowered.com/app/1502120/_/">WeWillSueYou.com</a>
+    </div>
+  </footer>
+
 </body>
+</html>
